--- a/components/css/style.css
+++ b/components/css/style.css
@@ -139,6 +139,8 @@ header{
     }
 }
 
+
+
 /*===============Imagagem Fundo===============*/
 .image-fundo{
     background-image: url(../img/fundo.jpg);
@@ -155,6 +157,16 @@ header{
     opacity: 0.9;
 }
 
+#image-fundo{
+    .row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform: translateY(200px);
+        height: 50vh;
+    }
+}
+
 /*===============Animate text===============*/
 
 
@@ -162,62 +174,7 @@ header{
 
 
 
-.wrapper .content ol li span{
-    font-weight: 600;
-    -webkit-text-fill-color: transparent;
-    background: linear-gradient(20deg, #A12626, #550BEC);
-    -webkit-background-clip: text;
-    white-space: nowrap;
-    display: inline-block;
-    border-right: .4rem solid #ffff;
-    animation: cursor .8s step-end infinite, typing 3s steps(20) infinite alternate;
 
-}
-
-.wrapper .content ol li{
-    animation: slide calc(2*1*0s) steps(2) infinite;
-}
-
-.wrapper .content ol li{
-    animation: slider-up 25s infinite;
-}
-
-@keyframes cursor {
-    50% { border-color: transparent;}
-}
-
-@keyframes typing {
-    0%,10%{
-        width: 0%;
-    }
-
-    70%,100% {
-        width: 101%;
-    }
-}
-
-
-
-@keyframes slide {
-    100%{
-        transform: translateY(-200%);
-    }
-}
-
-@keyframes slider-up {
-
-    0%,10%{
-        transform: translateY(20%);
-    }
-    
-
-    70%,100%{
-        transform: translateY(-500%);
-    }
-
-    
-    
-}
 
 
 /*===============Sobre nós===============*/
@@ -312,7 +269,7 @@ section#sobre {
     
 }
 
-/*===============Sobre nós===============*/
+/*===============Produtos===============*/
 section#produtos{
     padding: 60px;
     position: absolute;
@@ -345,9 +302,13 @@ section#produtos{
         padding: 20px 30px 30px 30px;
         max-width: 300px;
         width: 100%;
+        position: relative;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 
     }
+
+
+    
 
     .img-card{
         width: 100%;
@@ -450,5 +411,155 @@ section#produtos{
     .bi-trash3::before {
         color: white;
         line-height: 1.7;
+    }
+}
+
+/*===============Promocoes===============*/
+
+
+section#promocoes {
+    top: 2524px;
+    position: absolute;
+    opacity: 0.8;
+
+
+    #ofertas {
+        background: linear-gradient(-206deg, #A12626, #550BEC);
+        height: 55vh;
+        margin-top: 41px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+        article {
+            border: 2px solid white;
+            width: 80%;
+            height: 45vh;
+            border-radius: 10px;
+            backdrop-filter: blur(500px);
+            background: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            span.hs{
+                padding-left: 70px;
+            }
+            h3, h4 {
+                -webkit-text-fill-color: white;
+                font-size: 4rem;
+            }
+
+            img{
+                width: 235px;
+                position: absolute;
+                transform: translate(-230px, 31px);
+                -webkit-text-fill-color:transparent;
+                background: linear-gradient(20deg, #A12626, #550BEC);
+                -webkit-background-clip: text;
+                -webkit-space:nowrap;
+            }
+        }
+    }
+}
+
+
+
+
+
+section#CONTACTOS_FOOTER {
+    position: absolute;
+    top: 405%;
+
+    #logo {
+        height: 37px;
+    }
+}
+/*=============== Contactos===============*/ 
+section#CONTACTOS_FOOTER{
+
+
+    .contactos-div.container {
+        background-color: white;
+        margin-left: 9%;
+        box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+        padding: 30px;
+    }
+
+    .dados {
+        display: flex;
+        
+    }
+
+    i{
+        font-size: 25px;
+        -webkit-text-fill-color:white;
+        background: linear-gradient(20deg, #A12626, #550BEC);
+        -webkit-space:nowrap;
+        border-radius: 50px;
+        transition: 1s;
+        width: 44px;
+        height: 44px;
+        text-align: center;
+        padding-top: 5px;
+    
+    }
+
+    i:hover{
+        transition: 1s;
+        transform: scale(1.1);
+    }
+
+    p{
+        font-size: 13pt;
+        font-weight: 600;
+        line-height: 32px;
+    }
+
+    .row.gap-3.px-2 {
+        display: flex;
+        justify-content: center;
+    }
+
+    form{
+        width: 100%;
+        box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+        padding: 30px;
+        background: #fff;
+    }
+
+    input.form-control {
+        border-width: 10px;
+        border: 1px solid;
+        border-image: linear-gradient(20deg, #A12626, #550BEC) 1;
+        height: 45px;
+    }
+
+    input.form-control:hover, input.form-control:focus{
+        box-shadow: none;
+    }
+
+    textarea{
+        border-width: 10px;
+        border: 1px solid;
+        border-image: linear-gradient(20deg, #A12626, #550BEC) 1;
+        height: 80px;
+    }
+
+    button.btn {
+        background-color: #85AE2E;
+        color: white;
+        border: none;
+        transition: 1s;
+        width: 120px;
+    }
+
+
+    button.btn:hover, button.btn:focus{
+        background-color: #85AE2E;
+        color: white;
+        border: none;
+        transform: scale(1.1);
     }
 }
